--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 
 <head>
     <title>Mandelbrot viewer</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="Mandelbrot set viewer">
+    <meta name="keywords" content="JavaScript, Mandelbrot, Web">
+    <meta name="author" content="Akos Seres">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
