--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         canvas {
             margin: 0px;
             padding: 0px;
+            width: 100%;
+            height: 100%;
+            display: block;
         }
     </style>
 </head>
