--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             margin: 0px;
             padding: 0px;
             overflow: hidden;
+            white-space: nowrap;
         }
+
         canvas {
             margin: 0px;
             padding: 0px;
@@ -21,11 +23,147 @@
             height: 100%;
             display: block;
         }
+
+        .settings-container {
+            position: absolute;
+            margin: 0px;
+            padding: 0.65rem;
+            top: 0px;
+            left: 0px;
+            background-color: rgba(255, 255, 255, 0.3);
+            color: black;
+            backdrop-filter: blur(0.5rem);
+            font-family: Arial, Helvetica, sans-serif;
+            border-bottom-right-radius: 1.2rem;
+            width: auto;
+        }
+
+        #contentCheckbox {
+            display: none;
+        }
+
+        #contentCheckbox:checked~#contentCheckboxLabel>svg {
+            transform: rotate(90deg);
+            margin-left: 1rem;
+        }
+
+        svg {
+            transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+            display: block;
+            margin-left: 0.2rem;
+        }
+
+        .settings-content {
+            display: block;
+            overflow: hidden;
+            width: 0px;
+            height: 0px;
+            padding-top: 0px;
+            transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
+            white-space: nowrap;
+            line-height: 1.6;
+        }
+
+        #contentCheckbox:checked~.settings-content {
+            display: block;
+            width: 12rem;
+            height: 6rem;
+            padding-top: 0.8rem;
+        }
+
+        #iterInput {
+            display: inline-block;
+            width: 5rem;
+            border-radius: 100vh;
+            background-color: rgba(240, 255, 255, 0.75);
+            border: none;
+        }
+
+        #iterLabel {
+            transition: opacity 0.5s;
+        }
+
+        #autoCheckbox {
+            background-color: rgba(240, 255, 255, 0.3);
+        }
+
+        #autoCheckbox:checked~#iterLabel {
+            pointer-events: none;
+            opacity: 0.5;
+        }
+
+        #resetButton {
+            background-color: rgba(240, 255, 255, 0.6);
+            border-top-left-radius: 100vh;
+            border-bottom-left-radius: 100vh;
+            width: fit-content;
+            padding-right: 0.3rem;
+            padding-left: 0.6rem;
+            margin-left: auto;
+            margin-right: 0px;
+            margin-top: 0.6rem;
+            display: inline-block;
+            font-size: small;
+            border-right: 0.5px solid black;
+            transition: background-color 0.2s;
+        }
+
+        #exportButton {
+            background-color: rgba(240, 255, 255, 0.6);
+            border-top-right-radius: 100vh;
+            border-bottom-right-radius: 100vh;
+            width: fit-content;
+            padding-right: 0.6rem;
+            padding-left: 0.3rem;
+            margin-left: -4px;
+            margin-right: auto;
+            margin-top: 0.6rem;
+            display: inline-block;
+            font-size: small;
+            border-left: 0.5px solid black;
+            transition: background-color 0.2s;
+        }
+
+        #exportButton:hover,
+        #resetButton:hover {
+            background-color: rgba(144, 155, 155, 0.95);
+        }
+
+        hr {
+            border: 0;
+            height: 0;
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
+            border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+            margin-top: 1px;
+            margin-bottom: 0.15rem;
+        }
     </style>
 </head>
 
 <body>
     <canvas id="mainCanvas"></canvas>
+    <div class="settings-container">
+        <input type="checkbox" id="contentCheckbox" />
+        <label for="contentCheckbox" id="contentCheckboxLabel">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 120.64 122.88"
+                style="enable-background:new 0 0 120.64 122.88; width: 1.5rem; height: 1.5rem;" xml:space="preserve">
+                <g>
+                    <path
+                        d="M54.03,108.91c-1.55,1.63-2.31,3.74-2.28,5.85c0.03,2.11,0.84,4.2,2.44,5.79l0.12,0.12c1.58,1.5,3.6,2.23,5.61,2.2 c2.01-0.03,4.01-0.82,5.55-2.37c17.66-17.66,35.13-35.61,52.68-53.4c0.07-0.05,0.13-0.1,0.19-0.16c1.55-1.63,2.31-3.76,2.28-5.87 c-0.03-2.11-0.85-4.21-2.45-5.8l-0.27-0.26C100.43,37.47,82.98,19.87,65.46,2.36C63.93,0.82,61.93,0.03,59.92,0 c-2.01-0.03-4.03,0.7-5.61,2.21l-0.15,0.15c-1.57,1.58-2.38,3.66-2.41,5.76c-0.03,2.1,0.73,4.22,2.28,5.85l47.22,47.27 L54.03,108.91L54.03,108.91z M2.26,106.91c-1.54,1.62-2.29,3.73-2.26,5.83c0.03,2.11,0.84,4.2,2.44,5.79l0.12,0.12 c1.57,1.5,3.6,2.23,5.61,2.21c2.01-0.03,4.02-0.82,5.55-2.37C31.01,101.2,48.87,84.2,66.39,67.12c0.07-0.05,0.14-0.11,0.21-0.17 c1.55-1.63,2.31-3.76,2.28-5.87c-0.03-2.11-0.85-4.21-2.45-5.8C48.94,38.33,31.36,21.44,13.83,4.51l-0.12-0.13 c-1.53-1.54-3.53-2.32-5.54-2.35C6.16,2,4.14,2.73,2.56,4.23L2.41,4.38C0.84,5.96,0.03,8.05,0,10.14c-0.03,2.1,0.73,4.22,2.28,5.85 l47.18,45.24L2.26,106.91L2.26,106.91z" />
+                </g>
+            </svg>
+        </label>
+        <div class="settings-content" nowrap>
+            <hr>
+            <input type="checkbox" name="autoCheckbox" id="autoCheckbox" checked>
+            <label for="autoCheckbox">Auto iterations</label><br>
+            <label id="iterLabel" for="iterInput" nowrap>Iterations: <input id="iterInput" type="number" /></nobr>
+            </label><br>
+            <div id="resetButton">Reset view</div>
+            <div id="exportButton">Export to PNG</div>
+        </div>
+    </div>
     <script id="vShader" type="x-shader/x-vertex">
         attribute vec4 aVertexPosition;
         void main() {
