Implement image exporting

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <label id="iterLabel" for="iterInput" nowrap>Iterations: <input id="iterInput" type="number" /></nobr>
             </label><br>
             <div id="resetButton" onclick="resetView();">Reset view</div>
-            <div id="exportButton">Export to PNG</div>
+            <div id="exportButton" onclick="exportImage();">Export to PNG</div>
         </div>
     </div>
     <script id="vShader" type="x-shader/x-vertex">
