--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
         </label>
         <div class="settings-content" nowrap>
             <hr>
-            <input type="checkbox" name="autoCheckbox" id="autoCheckbox" checked>
+            <input type="checkbox" name="autoCheckbox" id="autoCheckbox" onclick="renderer.autoClicked(this);" checked>
             <label for="autoCheckbox">Auto iterations</label><br>
-            <label id="iterLabel" for="iterInput" nowrap>Iterations: <input id="iterInput" type="number" /></nobr>
+            <label id="iterLabel" for="iterInput" nowrap>Iterations: <input id="iterInput" type="number" min="1" max="2500" step="1" onchange="renderer.iterationsChanged(this);" /></nobr>
             </label><br>
             <div id="resetButton" onclick="resetView();">Reset view</div>
             <div id="exportButton" onclick="exportImage();">Export to PNG</div>
