Fix padding on input

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
             border-radius: 100vh;
             background-color: rgba(240, 255, 255, 0.75);
             border: none;
+            padding-left: 0.4rem;
         }
 
         #iterLabel {
