Set auto building

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             gl_Position = aVertexPosition;
         }
     </script>
-    <script src="index.js" defer></script>
+    <script src="main.js" defer></script>
 </body>
 
 </html>
